1/11 2:32 리뷰관련 DAO,VO,ACTION,js,properties 추가

--- a/boardGameCafe/src/main/webapp/WEB-INF/seul.properties
+++ b/boardGameCafe/src/main/webapp/WEB-INF/seul.properties
@@ -5,3 +5,8 @@
 /game/gameAdmin.do=kr.list.action.GameAdminAction
 /game/gameWriteForm.do=kr.list.action.GameWriteFormAction
 /game/write.do=kr.list.action.GameWriteAction
+#review
+/game/listReview.do=kr.review.action.ListReviewAction
+/game/writeReview.do=kr.review.action.WriteReviewAction
+/game/updateReview.do=kr.review.action.UpdateReviewAction
+/game/deleteReview.do=kr.review.action.DeleteReviewAction
