1/11일 오후2시34분 방, 예약 관련 VO, DAO, Action, jsp, properties 보냅니다.

--- a/boardGameCafe/src/main/webapp/WEB-INF/hoon.properties
+++ b/boardGameCafe/src/main/webapp/WEB-INF/hoon.properties
@@ -1,4 +1,7 @@
 #ReservationMain Page
-/reserve/reserveMain.do=kr.reserve.action.ReserveAction
-#Room Page 
-/room/roomlst.do=kr.room.action.RoomFirstAction
+/reserve/reserveMain.do=kr.reserve.action.ReserveMainAction
+/reserve/reserve.do=kr.reserve.action.ReserveAction
+#Room Page
+/room/roomWriteForm.do=kr.room.action.ReserveRoomFormAction
+/room/write.do=kr.room.action.ReserveRoomAction
+/room/roomDetail.do=kr.room.action.RoomDetailAction
