230111 14:42 공지 수정, 문의 글쓰기/수정/삭제

--- a/boardGameCafe/src/main/webapp/WEB-INF/hyem.properties
+++ b/boardGameCafe/src/main/webapp/WEB-INF/hyem.properties
@@ -7,3 +7,12 @@
 /notice/deleteNoticeFile.do=kr.notice.action.DeleteNoticeFileAction
 /notice/noticeUpdate.do=kr.notice.action.NoticeUpdateAction
 /notice/noticeDelete.do=kr.notice.action.NoticeDeleteAction
+#inquiry
+/inquiry/inquiryList.do=kr.inquiry.action.InquiryListAction
+/inquiry/inquiryWriteForm.do=kr.inquiry.action.InquiryWriteFormAction
+/inquiry/inquiryWrite.do=kr.inquiry.action.InquiryWriteAction
+/inquiry/inquiryDetail.do=kr.inquiry.action.InquiryDetailAction
+/inquiry/inquiryUpdateForm.do=kr.inquiry.action.InquiryUpdateFormAction
+/inquiry/deleteInquiryFile.do=kr.inquiry.action.DeleteInquiryFileAction
+/inquiry/inquiryUpdate.do=kr.inquiry.action.InquiryUpdateAction
+/inquiry/inquiryDelete.do=kr.inquiry.action.InquiryDeleteAction
