--- a/boardGameCafe/src/main/webapp/WEB-INF/ahnyh123.properties
+++ b/boardGameCafe/src/main/webapp/WEB-INF/ahnyh123.properties
@@ -1,2 +1,5 @@
 #cart
 /cart/cart.do=kr.cart.action.CartAction
+/cart/deleteCart.do=kr.cart.action.DeleteCartAction
+/cart/modifyCart.do=kr.cart.action.ModifyCartAction
+/cart/write.do=kr.cart.action.WriteAction
