23/01/11 김동혁 커밋

--- a/boardGameCafe/src/main/webapp/WEB-INF/ddongk.properties
+++ b/boardGameCafe/src/main/webapp/WEB-INF/ddongk.properties
@@ -10,4 +10,4 @@
 /mymember/myInquiryList.do=kr.myinqu.action.MyInquiryListAction
 /mymember/myReviewList.do=kr.myrev.action.MyReviewListAction
 /mymember/myReserve.do=kr.myreserve.action.MyReserveAction
-#?
+/mymember/myOrderList.do=kr.myorder.action.MyOrderAction
