--- a/boardGameCafe/src/main/webapp/WEB-INF/soon.properties
+++ b/boardGameCafe/src/main/webapp/WEB-INF/soon.properties
@@ -3,8 +3,9 @@
 /main/intro.do=kr.main.action.IntroAction
 #order
 /order/orderForm.do=kr.order.action.OrderFormAction
-/order/cartOrder.do=kr.order.action.CartOrderAction
-/order/orderDetail.do=kr.order.action.OrderDetailAction
+/order/order.do=kr.order.action.OrderAction
+/order/orderModifyForm.do=kr.order.action.ModifyFormAction
+
 
 
 
