230111 20:03 문의 답글쓰기

--- a/boardGameCafe/src/main/webapp/WEB-INF/hyem.properties
+++ b/boardGameCafe/src/main/webapp/WEB-INF/hyem.properties
@@ -16,3 +16,7 @@
 /inquiry/deleteInquiryFile.do=kr.inquiry.action.DeleteInquiryFileAction
 /inquiry/inquiryUpdate.do=kr.inquiry.action.InquiryUpdateAction
 /inquiry/inquiryDelete.do=kr.inquiry.action.InquiryDeleteAction
+#inquiry - reply
+/inquiry/inquiryReplyForm.do=kr.inquiry.action.InquiryReplyFormAction
+/inquiry/inquiryReply.do=kr.inquiry.action.InquiryReplyAction
+/inquiry/inquiryReplyDetail.do=kr.inquiry.action.InquiryReplyDetailAction
