--- a/boardGameCafe/src/main/webapp/WEB-INF/soon.properties
+++ b/boardGameCafe/src/main/webapp/WEB-INF/soon.properties
@@ -5,6 +5,7 @@
 /order/orderForm.do=kr.order.action.OrderFormAction
 /order/order.do=kr.order.action.OrderAction
 /order/orderModifyForm.do=kr.order.action.ModifyFormAction
+/order/orderModify.do=kr.order.action.ModifyAction
 
 
 
