파일 업로드

--- a/boardGameCafe/src/main/webapp/WEB-INF/seul.properties
+++ b/boardGameCafe/src/main/webapp/WEB-INF/seul.properties
@@ -4,7 +4,9 @@
 #admin
 /game/gameAdmin.do=kr.list.action.GameAdminAction
 /game/gameWriteForm.do=kr.list.action.GameWriteFormAction
+/game/gameDelete.do=kr.list.action.GameDeleteAction
 /game/write.do=kr.list.action.GameWriteAction
+/game/deleteFile.do=kr.list.action.GameDeleteFileAction
 #review
 /game/listReview.do=kr.review.action.ListReviewAction
 /game/writeReview.do=kr.review.action.WriteReviewAction
