--- a/boardGameCafe/src/main/webapp/WEB-INF/seul.properties
+++ b/boardGameCafe/src/main/webapp/WEB-INF/seul.properties
@@ -4,7 +4,7 @@
 #admin
 /game/gameAdmin.do=kr.list.action.GameAdminAction
 /game/gameWriteForm.do=kr.list.action.GameWriteFormAction
-/game/gameDelete.do=kr.list.action.GameDeleteAction
+/game/gameDelete.do=kr.list.action.GameDeleteAction2
 /game/write.do=kr.list.action.GameWriteAction
 /game/deleteFile.do=kr.list.action.GameDeleteFileAction
 #review
