230112 17:53 헤더, 메인, 문의수정/삭제

--- a/boardGameCafe/src/main/webapp/WEB-INF/hyem.properties
+++ b/boardGameCafe/src/main/webapp/WEB-INF/hyem.properties
@@ -20,3 +20,6 @@
 /inquiry/inquiryReplyForm.do=kr.inquiry.action.InquiryReplyFormAction
 /inquiry/inquiryReply.do=kr.inquiry.action.InquiryReplyAction
 /inquiry/inquiryReplyDetail.do=kr.inquiry.action.InquiryReplyDetailAction
+/inquiry/inquiryReplyUpdateForm.do=kr.inquiry.action.InquiryReplyUpdateFormAction
+/inquiry/inquiryReplyUpdate.do=kr.inquiry.action.InquiryReplyUpdateAction
+/inquiry/inquiryReplyDelete.do=kr.inquiry.action.InquiryReplyDeleteAction
