--- a/boardGameCafe/src/main/webapp/WEB-INF/soon.properties
+++ b/boardGameCafe/src/main/webapp/WEB-INF/soon.properties
@@ -6,6 +6,7 @@
 /order/order.do=kr.order.action.OrderAction
 /order/orderModifyForm.do=kr.order.action.ModifyFormAction
 /order/orderModify.do=kr.order.action.ModifyAction
+/order/orderCancel.do=kr.order.action.OrderCancelAction
 
 
 
