1/12일 오후11시36분 예약관련 다 보냄 proper~/vo/dao/action/jsp/css

--- a/boardGameCafe/src/main/webapp/WEB-INF/hoon.properties
+++ b/boardGameCafe/src/main/webapp/WEB-INF/hoon.properties
@@ -1,6 +1,7 @@
 #ReservationMain Page
 /reserve/reserveMain.do=kr.reserve.action.ReserveMainAction
 /reserve/reserve.do=kr.reserve.action.ReserveAction
+/reserve/reserveForm.do=kr.reserve.action.ReserveFormAction
 #Room Page
 /room/roomWriteForm.do=kr.room.action.ReserveRoomFormAction
 /room/write.do=kr.room.action.ReserveRoomAction
