--- a/boardGameCafe/src/main/webapp/WEB-INF/soon.properties
+++ b/boardGameCafe/src/main/webapp/WEB-INF/soon.properties
@@ -7,6 +7,7 @@
 /order/orderModifyForm.do=kr.order.action.ModifyFormAction
 /order/orderModify.do=kr.order.action.ModifyAction
 /order/orderCancel.do=kr.order.action.OrderCancelAction
+/order/orderRe.do=kr.order.action.OrderReAction
 
 
 
