1/14 오후11:56분 바탕흰,검정선,버튼색변경,양식정렬,클릭시 방보이게 등

--- a/boardGameCafe/src/main/webapp/WEB-INF/hoon.properties
+++ b/boardGameCafe/src/main/webapp/WEB-INF/hoon.properties
@@ -1,8 +1,9 @@
 #ReservationMain Page
 /reserve/reserveMain.do=kr.reserve.action.ReserveMainAction
-/reserve/reserve.do=kr.reserve.action.ReserveAction
+/room/reserve.do=kr.room.action.RoomReserveAction
 /reserve/reserveForm.do=kr.reserve.action.ReserveFormAction
 #Room Page
 /room/roomWriteForm.do=kr.room.action.ReserveRoomFormAction
 /room/write.do=kr.room.action.ReserveRoomAction
 /room/roomDetail.do=kr.room.action.RoomDetailAction
+/room/roomWrite.do=kr.room.action.RoomReserveAction
