2022/01/16 02:00 푸터추가, 페이징번호 수정

--- a/boardGameCafe/src/main/webapp/WEB-INF/yeongji.properties
+++ b/boardGameCafe/src/main/webapp/WEB-INF/yeongji.properties
@@ -7,3 +7,4 @@
 /myadmin/memdetail.do=kr.myadmin.action.adminMemDetailAction
 /myadmin/updateMemAuth.do=kr.myadmin.action.adminMemAuthUpdateAction
 /myadmin/orderdetail.do=kr.myadmin.action.adminOrderDetailAction
+/myadmin/updateStatus.do=kr.myadmin.action.adminStatusUpdateAction
